tests/fail/invalid_values3.stderr
error: could not generate sine wave for `rate` of 800 Hz and `frequency` of 440 Hz
 --> tests/fail/invalid_values3.rs:9:39
  |
9 |     let _wave = sine_wave!(frequency: 440, rate: 800);
  |                                       ^^^
